[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivslab"
version = "0.0.0"
description = "DerivsLab — option pricing, volatility and greeks research"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name="Jorge Filho Gustavo", email="gustavob.jorge@hotmail.com"}
]
license = {text = "MIT"}